api was changed (swagger.yml and code), several fixes for rk-1 (frontend) checklist. security improvements and bug fixes
