# server/routes/signup.go
@@ -5,18 +5,22 @@ import (
 	"failless/db"
 	"failless/server/forms"
 	"failless/server/utils"
+	"fmt"
 	htmux "github.com/dimfeld/httptreemux"
 	"log"
 	"net/http"
+	"os"
 )
 
 func SignUp(w http.ResponseWriter, r *http.Request, ps map[string]string) {
 	log.Println("/api/signup")
-	CORS(w, r)
-	uid, err := utils.IsAuth(w, r)
-	if err != nil || uid > 0 {
-		w.Header().Set("Content-Type", "application/json")
-		w.WriteHeader(http.StatusNotModified)
+	if !CORS(w, r) {
+		return
+	}
+
+	err := utils.IsAuth(w, r)
+	if err != nil {
+		GenErrorCode(w, r, err.Error(), http.StatusUnauthorized)
 		return
 	}
 	r.Header.Set("Content-Type", "application/json")
@@ -28,17 +32,22 @@ func SignUp(w http.ResponseWriter, r *http.Request, ps map[string]string) {
 		return
 	}
 
+	log.Println("decoded signup form")
 	ok := form.Validate()
 	if !ok {
 		ValidationFailed(w, r)
+		GenErrorCode(w, r, "Data Error", http.StatusForbidden)
 		return
 	}
+	log.Println("validate signup form")
 
-	user, err := db.GetUserByPhoneOrEmail(db.ConnectToDB(), form.Name, form.Email)
+	user, err := db.GetUserByPhoneOrEmail(db.ConnectToDB(), form.Phone, form.Email)
 	if err != nil {
 		GenErrorCode(w, r, "DB error", http.StatusInternalServerError)
 		return
 	}
+
+	log.Println(user)
 	if user.Uid > 0 {
 		GenErrorCode(w, r, "User with this information already exist", http.StatusConflict)
 		return
@@ -62,6 +71,23 @@ func SignUp(w http.ResponseWriter, r *http.Request, ps map[string]string) {
 	_, _ = w.Write(output)
 }
 
+func OptionsReq(w http.ResponseWriter, r *http.Request, ps map[string]string) {
+	if !CORS(w, r) {
+		return
+	}
+}
+
+// debug&test func
+func UserDelete(mail string) {
+	err := db.DeleteUser(db.ConnectToDB(), mail)
+	if err != nil {
+		fmt.Println(err)
+		os.Exit(1)
+	}
+	log.Println("Success 'UserDelete'")
+}
+
 func SignUPHandler(router *htmux.TreeMux) {
 	router.POST("/api/signup", SignUp)
+	router.OptionsHandler = OptionsReq
 }
